# hla_resolve

./: .gitattributes  .gitignore  LICENSE.txt  README.md  environment.yml  hla_resolve.py  investigate_haploblocks_methods.py  preprocess_methods.py  reconstruct_fasta_methods.py  test_clamp_offset.py  test_clamp_offset_dqa1.py
hla_resolve/: __init__.py  allele_match.py  analyze_4field_tiebreak.py  check_zero_distance.py  cleanup.py  cli.py  config.py  debug_alignment.py  debug_getSequences.py  detect_ties.py  get_indels.py  hla_typer.py  hla_typer_beta.py  investigate_haploblocks_methods.py  legacy_hla_typer.py  ont_pipeline.py  ont_workflow.py  pacbio_pipeline.py  pacbio_workflow.py  preprocess_methods.py  pyproject.toml  reconstruct_fasta_methods.py  resolve_alleles.py  resolve_alleles_pipeline.py  sample.py  sample_manager.py  setup.py  test_against_truth.py  test_hla_typer.py  test_pass2_metrics.py  test_pass3_tiebreak_report.py  utils.py  workflow_config.py
hla_resolve/data/hla_gff/: hla_a_cds_sorted_coords.txt  hla_a_gene_coords.txt  hla_b.gff3  hla_b_cds_sorted.gff3  hla_b_cds_sorted_coords.txt  hla_b_gene_coords.txt  hla_c.gff3  hla_c_cds_sorted.gff3  hla_c_cds_sorted_coords.txt  hla_c_gene.gff3  hla_c_gene_coords.txt  hla_dpa1.gff3  hla_dpa1_cds_sorted.gff3  hla_dpa1_cds_sorted_coords.txt  hla_dpa1_gene.gff3  hla_dpa1_gene_coords.txt  hla_dpa2.gff3  hla_dpa2_cds_sorted_coords.txt  hla_dpa2_gene.gff3  hla_dpb1_cds_sorted.gff3  hla_dpb1_gene_coords.txt  hla_dqa1.gff3  hla_dqa1_cds_sorted.gff3  hla_dqa1_cds_sorted_coords.txt  hla_dqa1_gene.gff3  hla_dqa2.gff3  (+23 more)
(+55 files in other folders)
